src/index.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --grey: #546e7a;
  --red: #e02b59;
  --grey_light: #90a4ae;
  --green: #5cb85c;
  --white: #fff;
  --pink: #ef95ac;
}

.ant-layout-content {
  background-color: #f5f5f5;
}
.ant-switch {
  border: solid 1px #c8c7cc;
}
.ant-switch-handle::before {
  border: solid 1px #c8c7cc;
}
body {
  .ant-picker-content {
    .ant-picker-cell {
      // @apply flex items-center justify-center;
      height: 32px;
      width: 32px;
      font-size: 16px;
      color: var(--grey);
      padding: 5px;
    }
  }
  .ant-picker-cell-in-view.ant-picker-cell-selected .ant-picker-cell-inner,
  .ant-picker-cell-in-view.ant-picker-cell-range-start .ant-picker-cell-inner,
  .ant-picker-cell-in-view.ant-picker-cell-range-end .ant-picker-cell-inner {
    @apply flex items-center justify-center;
    background-color: var(--red) !important;
    border-radius: 50% !important;
    padding: 10px !important;
    height: 32px;
    width: 32px;
  }
  .ant-picker-cell-in-view.ant-picker-cell-today
    .ant-picker-cell-inner::before {
    border: 1px solid var(--grey);
    border-radius: 50%;
    top: -3px;
    left: -3px;
    bottom: -3px;
    right: -3px;
  }
  .ant-picker-today-btn {
    color: var(--red);
  }

  .ant-picker-cell-in-view.ant-picker-cell-in-range {
    color: var(--white);
    &:last-child,
    &.ant-picker-cell-end {
      &::before {
        border-top-right-radius: 50%;
        border-bottom-right-radius: 50%;
      }
    }
    &:first-child,
    &.ant-picker-cell-start {
      &::before {
        border-top-left-radius: 50%;
        border-bottom-left-radius: 50%;
      }
    }
    &::before {
      background-color: var(--pink) !important;
    }
  }

  .ant-picker-cell-in-view.ant-picker-cell-range-hover-start:not(.ant-picker-cell-in-range):not(.ant-picker-cell-range-start):not(.ant-picker-cell-range-end)::after,
  .ant-picker-cell-in-view.ant-picker-cell-range-hover-end:not(.ant-picker-cell-in-range):not(.ant-picker-cell-range-start):not(.ant-picker-cell-range-end)::after,
  .ant-picker-cell-in-view.ant-picker-cell-range-hover-start.ant-picker-cell-range-start-single::after,
  .ant-picker-cell-in-view.ant-picker-cell-range-hover-start.ant-picker-cell-range-start.ant-picker-cell-range-end.ant-picker-cell-range-end-near-hover::after,
  .ant-picker-cell-in-view.ant-picker-cell-range-hover-end.ant-picker-cell-range-start.ant-picker-cell-range-end.ant-picker-cell-range-start-near-hover::after,
  .ant-picker-cell-in-view.ant-picker-cell-range-hover-end.ant-picker-cell-range-end-single::after,
  .ant-picker-cell-in-view.ant-picker-cell-range-hover:not(.ant-picker-cell-in-range)::after {
    background-color: var(--pink);
    border: solid 1px var(--pink);
    height: 32px;
    transition: none;
  }

  .ant-picker-cell-in-view.ant-picker-cell-range-hover-start::after {
    left: 16px;
  }

  .ant-picker-cell-range-hover-start::after,
  .ant-picker-cell-range-hover-end::after,
  .ant-picker-cell-range-hover::after {
    left: 0;
  }

  .ant-picker-cell::before {
    height: 32px;
  }

  .ant-picker-cell-in-view.ant-picker-cell-range-start:not(.ant-picker-cell-range-start-single)::before,
  .ant-picker-cell-in-view.ant-picker-cell-range-end:not(.ant-picker-cell-range-end-single)::before {
    background-color: var(--pink);
  }

  .ant-picker-range .ant-picker-active-bar {
    background-color: var(--red);
  }
}
//tabs style
.ant-tabs-nav-list {
  .ant-tabs-tab {
    @apply uppercase;
    padding: 0;
    font-size: 14px;
    font-weight: 600;
    color: var(--grey_light);
    &:hover {
      color: var(--grey);
    }
    &.ant-tabs-tab-active {
      .ant-tabs-tab-btn {
        color: var(--grey);
      }
    }
  }
  .ant-tabs-ink-bar {
    background-color: var(--red);
  }
}

//common style
.common__field {
  @apply col-span-2;
  &-wrap {
    @apply grid grid-cols-3 items-end;
    gap: 12px;
    margin-top: 25px;
  }
}
.common__txt {
  @apply text-center;
  width: 60%;
  margin: 16px auto 25px auto;
  line-height: 1.43;
  strong {
    color: var(--red);
  }
}
.common__info {
  @apply text-center;
  font-weight: 600;
  line-height: 1.43;
}
.common__strong--red {
  color: var(--red);
  margin-left: 8px;
}

.common__card {
  @apply mx-auto;
  width: 550px;
  margin-top: 20px;
  .common__btn {
    width: 100%;
    margin-top: 40px;
  }
}
.common__info_card {
  height: 132px;
  padding: 16px 25px;
}

.ant-alert {
  padding: 17px 16px;
  &.ant-alert-error {
    border-radius: 8px;
    border: solid 1px #d9534f;
    background-color: rgba(217, 83, 79, 0.1);
    .ant-alert-message {
      color: #d9534f;
    }
  }
  &.ant-alert-success {
    border-radius: 8px;
    border: solid 1px #5cb85c;
    background-color: rgba(92, 184, 92, 0.1);
    .ant-alert-message {
      color: #5cb85c;
    }
  }

  .ant-alert-message {
    font-size: 16px;
  }
}
//modal
.ant-modal-mask {
  filter: blur(10px);
  background-color: #c8c7cc;
  opacity: 0.7;
}
.ant-modal-content {
  padding: 0 26px;
  border-radius: 8px;
  box-shadow: 1.5px 1.5px 6px 0 rgba(0, 0, 0, 0.16);
}
.ant-modal-header {
  padding-bottom: 25px;
}
.ant-modal-title {
  font-size: 19px;
  font-weight: 600;
}
.ant-modal-footer {
  @apply flex items-center justify-between;
  padding-top: 25px;
}
.ant-btn {
  @apply flex items-center justify-center cursor-pointer uppercase;
  color: #fff;
  padding: 17px 11px 18px;
  height: 54px;
  width: 200px;
  border-radius: 8px;
  &:hover {
    color: #fff;
  }
  &.ant-btn-default {
    background-color: var(--grey);
    &:hover {
      background-color: #475d68;
    }
  }
  &.ant-btn-primary {
    background-color: var(--red);
    border: none;
    &:hover {
      background-color: #bf244b;
    }
  }
}

